# ai-shopify-automation-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WALKTHROUGH.md  brand_guide.md  etsy-pipeline.service  etsy_autonomous.py  etsy_brand_crew.py  etsy_launch_executor.py  loop.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup_rclone.sh  setup_vps.sh  shopify-pipeline.service  test_infrastructure.sh
.config/: .gitleaks.toml
.github/workflows/: security.yml
config/: .gitleaks.toml
docs/: CLEANUP.md  IMPLEMENTATION.md  QUICKREF.md  threat-model.md
prompts/: master.txt
prompts_example/: master.txt
scripts/: api_retry.py  canva_api.py  canva_image_generator.py  canva_oauth.py  canva_product_creator.py  canva_watcher.py  common.py  config.py  db.py  email_digest.py  etsy_api_uploader.py  etsy_autonomous.py  etsy_brand_crew.py  etsy_launch_executor.py  etsy_login.py  etsy_oauth.py  etsy_uploader.py  file_organizer.py  health_check.py  health_dashboard.py  image_processor.py  listing_builder.py  logger.py  meta_generator.py  pre_upload_validator.py  preflight.py  queue_writer.py  sales_tracker.py  security_policy.py  seo_analyzer.py  shopify_autonomous.py  shopify_brand_crew.py  shopify_setup.py  shopify_uploader.py  validation.py
tests/: test_common.py  test_db.py  test_security_policy.py  test_seo_analyzer.py
